[package]
name = "airtable-api-wasi"
description = "An API client for Airtable"
version = "0.2.1"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/flows-network/cio"
documentation = "https://docs.rs/airtable-api-wasi"

[lib]
name = "airtable_api"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4" }
reqwest_wasi = { version = "0.11", default-features = false, features = ["json"] }
reqwest-middleware-wasi = "0.2"
reqwest-retry-wasi = "0.3"
reqwest-tracing-wasi = { version = "0.4", features = ["opentelemetry_0_17"] }
schemars = { version = "0.8", features = ["chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
